Refactoring, production quality code :>

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <title>Tautologia</title>
 
   <script src="page.js"></script>
+  <script src="rpn.js"></script>
 </head>
 <body onload="loaded()">
   <h1>Tautologia</h1>
