--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
   <button type="button" onclick="onCalculatePress()">Oblicz</button>
 
   <div id="graph"></div>
+  <div id="is-tautology"></div>
 
   <table id="outcome-table" border="1">
   </table>
