--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,9 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
   <title>Tautologia</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet" type="text/css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.10.0/vis.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.10.0/vis.min.css" charset="utf-8">
@@ -10,23 +12,134 @@
   <script src="rpn.js"></script>
 
   <style type="text/css">
+    body {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      margin: 0;
+      padding: 0;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    .toolbar {
+      display: flex;
+
+      width: 100%;
+      height: 64px;
+      margin-bottom: 16px;
+
+      background-color: #8BC34A;
+      box-shadow: 0px 4px 5px #888888;
+
+      font-size: 34px;
+      align-items: center;
+    }
+
+    .toolbar > div {
+      opacity: 0.87;
+      margin-left: 15px;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      width: 80%;
+      height: 100%;
+
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 16px;
+
+      padding: 15px;
+
+      border-radius: 2px;
+      box-shadow: 0px 5px 10px #888888;
+    }
+
+    #expression {
+      font-family: 'Roboto Mono', monospace;
+      font-size: 24px;
+    }
+
+    #tutorial {
+      font-family: 'Roboto Mono', monospace;
+      margin: 15px;
+    }
+
     #graph {
-      width: 600px;
-      height: 400px;
-      border: 1px solid lightgray;
+      width: 100%;
+      height: 600px;
+    }
+
+    #is-tautology, #is-not-tautology {
+      display: none;
+
+      font-size: 24px;
+
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+
+    #is-tautology {
+      color: #4CAF50;
+    }
+
+    #is-not-tautology {
+      color: #F44336;
+    }
+
+    table {
+      border-collapse: collapse;
+    }
+
+    table, th, td {
+      border: 1px solid black;
+    }
+
+    th {
+      padding: 5px;
+    }
+
+    td {
+      min-width: 18px;
+      text-align: center;
+    }
+
+    td.result {
+      text-align: right;
     }
   </style>
 </head>
 <body onload="loaded()">
-  <h1>Tautologia</h1>
+  <div class="toolbar">
+    <div>Rachunek zdan</div>
+  </div>
 
-  <input id="expression" type="text" name="expression">
-  <button type="button" onclick="onCalculatePress()">Oblicz</button>
+  <div class="container">
+    <input
+      id="expression"
+      type="text"
+      name="expression"
+      placeholder="Formula np. 'p&q'"
+      onkeypress="onEnterPress(event)">
 
-  <div id="graph"></div>
-  <div id="is-tautology"></div>
+    <div id="tutorial">
+      <div>&amp; - koniunkcja</div>
+      <div>| - alternatywa</div>
+      <div>&gt; - implikacja</div>
+      <div>= - rownowaznosc</div>
+      <div>! - negacja</div>
+    </div>
 
-  <table id="outcome-table" border="1">
-  </table>
+    <div id="graph"></div>
+
+    <div id="is-tautology">Zdanie jest tautologia</div>
+    <div id="is-not-tautology">Zdanie nie jest tautologia</div>
+
+    <table id="outcome-table" border="1"></table>
+  </div>
 </body>
 </html>
