Whoops, now it's ready

--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
       id="expression"
       type="text"
       name="expression"
-      placeholder="Formula np. 'p&q'"
+      placeholder="Formula np. 'p&amp;q'"
       onkeypress="onEnterPress(event)">
 
     <div id="tutorial">
