--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,8 @@
       margin-right: auto;
       margin-bottom: 16px;
 
-      padding: 15px;
+      padding-top: 15px;
+      padding-bottom: 15px;
 
       border-radius: 2px;
       box-shadow: 0px 5px 10px #888888;
@@ -62,25 +63,32 @@
     #expression {
       font-family: 'Roboto Mono', monospace;
       font-size: 24px;
+
+      margin-left: 15px;
+      margin-right: 15px;
     }
 
     #tutorial {
       font-family: 'Roboto Mono', monospace;
-      margin: 15px;
+      background-color: #F1F8E9;
+
+      margin-top: 15px;
+      margin-bottom: 15px;
+      padding: 10px;
     }
 
     #graph {
       width: 100%;
       height: 600px;
+
+      margin-left: 15px;
+      margin-right: 15px;
     }
 
     #is-tautology, #is-not-tautology {
       display: none;
-
       font-size: 24px;
-
-      margin-top: 15px;
-      margin-bottom: 15px;
+      margin: 15px;
     }
 
     #is-tautology {
@@ -93,13 +101,20 @@
 
     table {
       border-collapse: collapse;
+
+      margin-left: 15px;
+      margin-right: 15px;
+
+      font-size: 18px;
     }
 
     table, th, td {
+      font-family: 'Roboto Mono', monospace;
       border: 1px solid black;
     }
 
     th {
+      opacity: 0.87;
       padding: 5px;
     }
 
@@ -110,6 +125,14 @@
 
     td.result {
       text-align: right;
+    }
+
+    tr.title {
+      background-color: #AED581;
+    }
+
+    tr.true {
+      background-color: #C5E1A5;
     }
   </style>
 </head>
@@ -130,6 +153,7 @@
       <div>&amp; - koniunkcja</div>
       <div>| - alternatywa</div>
       <div>&gt; - implikacja</div>
+      <div>&lt; - implikacja w druga strone</div>
       <div>= - rownowaznosc</div>
       <div>! - negacja</div>
     </div>
