--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,10 @@
       padding: 10px;
     }
 
+    #tutorial > .notice {
+      margin-top: 25px;
+    }
+
     #graph {
       width: 100%;
       height: 600px;
@@ -158,6 +162,10 @@
       <div>&lt; - implikacja w drugą stronę</div>
       <div>= - równoważność</div>
       <div>! - negacja</div>
+      <div class="notice">
+        Uwaga: Aby uniknąć błędów w interpretacji formuły, korzystając z negacji
+        należy umieszczać ją w nawiasach np. (!p), lub (!(p&gt;q))
+    </div>
     </div>
 
     <div id="graph"></div>
