installed and configured eslint, fixed all errors

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.10.0/vis.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.10.0/vis.min.css" charset="utf-8">
 
-  <script src="page.js"></script>
-  <script src="rpn.js"></script>
+  <script src="page.js" defer></script>
+  <script src="rpn.js" defer></script>
 
   <link rel="stylesheet" href="styles.css" charset="utf-8">
 </head>
-<body onload="loaded()">
+<body>
   <div class="toolbar">
     <div>Rachunek zdań</div>
   </div>
