remove onKeyPress from html file

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,7 @@
       class="typo-code"
       type="text"
       name="expression"
-      placeholder="Formuła np. 'p&amp;q'"
-      onkeypress="onEnterPress(event)">
+      placeholder="Formuła np. 'p&amp;q'">
 
     <div class="user-guide">
       <div class="typo-code">
