Add support for i18next

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="toolbar">
-    <div>Rachunek zdań</div>
+    <div id="toolbar-title">Rachunek zdań</div>
   </div>
 
   <div class="container">
@@ -32,7 +32,6 @@
       <button id="btn-pl">
         polish
       </button>
-    <div id="output"></div>
 
     <input
       id="expression"
