--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
   <div class="toolbar">
     <div data-i18next="toolbarTitle">Rachunek zdań</div>
     <div class="lang-buttons">
-      <button id="btn-en">En</button>
-      <button id="btn-pl">Pl</button>
+      <button id="btn-en">EN</button>
+      <button id="btn-pl">PL</button>
     </div>
   </div>
 
